# filter-event-sink

./: .dockerignore  .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  RELEASE.md  docker-compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  create-release.yaml  security-scan.yaml
demo/: README.md  pipeline.yaml  pipelineinstance.yaml  pipelinerun.yaml  pipelinesource.yaml
docs/: _PUBLISHING_PATH  _category_.json  overview.md
filter_event_sink/: cloudevents.py  config.py  filter.py
tests/: __init__.py  test_cloudevents.py  test_config.py  test_event_extraction.py  test_integration.py  test_thread.py
