[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter_event_sink"]  # Specify the package directory

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
name = "filter_event_sink"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "openfilter[all]>=0.1.0,<0.2.0",
  "requests>=2.31.0,<3",
  "urllib3>=2.5.0,<3",
]

[project.optional-dependencies]
dev = [
  "build==1.2.1",
  "setuptools==72.2.0",
  "twine>=6.1.0,<7",
  "wheel==0.45.1",
  "black==25.9.0",
  "isort==7.0.0",
  "flake8==7.1.1",
  "pytest==9.0.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.14.0",
  "responses==0.25.0"
]

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
profile = "black"
