[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter_event_sink"]  # Specify the package directory

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
name = "filter_event_sink"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = ["version"]

dependencies = [
  "openfilter[all]==0.1.18",
  "requests==2.32.5",
  "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
  "build==1.4.0",
  "setuptools==80.10.1",
  "twine==6.2.0",
  "wheel==0.45.1",
  "black==26.1.0",
  "isort==7.0.0",
  "flake8==7.3.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
  "responses==0.25.8"
]

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.black]
skip-string-normalization = true

[tool.isort]
line_length = 88
profile = "black"
